--- a/src/App.css
+++ b/src/App.css
@@ -54,11 +54,11 @@ header {
 }
 
 .container {
-  width: 80vw;
+  width: 1250px;
   margin: 0 auto;
 }
 
-.container img {
+header img {
   height: 75px;
 }
 
@@ -73,7 +73,7 @@ header {
 .firstsection img {
   width: 350px;
   height: 100%;
-  border-radius: 15px;
+  border-radius: 10px;
 }
 
 .firstsection h1 {
@@ -90,8 +90,98 @@ header {
   line-height: 29px;
 }
 
+/*  */
+/* ------------------------2nde Section-------------------------- */
+
 .secondsection {
   background-color: #f3f5f5;
+}
+
+/* #emptycart {
+  background-color: white;
+  margin-top: 75px;
+  width: 350px;
+  height: fit-content;
+  border-radius: 10px;
+  position: sticky;
+  top: 20px;
+  padding: 10px;
+} */
+
+#emptycarttitle {
+  background-color: #bac3c3;
+  color: #8b9a9b;
+}
+
+#emptycarttext {
+  color: #868a8a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  height: 120px;
+}
+
+aside {
+  background-color: white;
+  margin-top: 75px;
+  width: 350px;
+  height: fit-content;
+  border-radius: 10px;
+  position: sticky;
+  top: 20px;
+  padding: 10px;
+}
+
+aside > div:first-child {
+  background-color: #00cdbd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  border-radius: 5px;
+  color: white;
+}
+
+.cartLine {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 55px;
+  color: #2e3333;
+  margin: 5px 0;
+}
+
+.cartLine > span {
+  display: flex;
+  gap: 4px;
+  align-items: center;
+}
+
+.subtot {
+  padding: 10px 0;
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid #d1d7d7;
+  border-top: 1px solid #d1d7d7;
+}
+
+div.subtot p {
+  height: 34px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#total {
+  margin: 10px;
+  height: 34px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .secondsection h2 {
@@ -100,17 +190,9 @@ header {
   margin: 25px 0;
 }
 
-#aside {
-  margin-top: 80px;
-  width: 350px;
-  height: 500px;
-  background-color: white;
-  border-radius: 15px;
-}
-
-div.tower {
-  width: calc(100% - 250px);
-}
+/* div.tower {
+  width: 100%;
+} */
 
 div.wrapper {
   display: flex;
@@ -118,12 +200,12 @@ div.wrapper {
   gap: 20px;
 }
 
-div.meal {
+article.meal {
   padding: 15px;
-  width: calc(50% - 20px);
+  width: calc(50% - 10px);
   background-color: white;
   height: 160px;
-  border-radius: 10px;
+  border-radius: 5px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -134,6 +216,11 @@ p.mealname {
   font-family: "IBM-Regular";
   font-size: 18px;
   margin-bottom: 10px;
+  height: 20px;
+  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  text-overflow: ellipsis;
 }
 
 p.mealdescription {
@@ -141,11 +228,11 @@ p.mealdescription {
   overflow: hidden;
   overflow-x: hidden;
   overflow-y: hidden;
-  text-overflow: ellipsis;
+  /* text-overflow: ellipsis; */
   font-size: 14px;
   line-height: 21px;
   color: #808484;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 p.price {
@@ -153,9 +240,28 @@ p.price {
   color: #808484;
 }
 
-div.meal img {
+article.meal img {
   height: 130px;
   width: 130px;
   object-fit: cover;
-  border-radius: 10px;
+  border-radius: 5px;
 }
+
+article.meal:hover {
+  cursor: pointer;
+}
+
+@media (max-width: 1300px) {
+  .container {
+    width: 96vw;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 1124px) {
+  article.meal {
+    width: calc(100% - 20px);
+  }
+}
+
+/* breakpoints 1250 1124 */
